<resources>
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
    <!-- Hoang -->
    <string name="app_name">WhyBook?</string>
    <string name="rate">Rate: %1$s</string>
    <string name="restaurant_list">Danh sách nhà hàng</string>
    <string name="booked_restaurant">Chỗ đã đặt</string>
    <string name="voucher">Voucher</string>
    <string name="user_information">Thông tin người dùng</string>
    <string name="feed_back">Phản hồi ứng dụng</string>
    <string name="restaurant_near_you">Nhà hàng gần bạn</string>
    <string name="searching_restaurant">Tìm kiếm nhà hàng</string>

    <!-- Duy -->
    <string name="time_booking">Time booking:  %1$s</string>
    <string name="order">Order #%1$s</string>

    <!-- Duong -->
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="telephone">Telephone</string>
    <string name="Enter_your_comment">Enter your comment</string>
    <string name="phi_duong">phi duong</string>
    <string name="review">Review restaurant :</string>
    <string name="Information">Information</string>
    <string name="address">Address</string>
    <string name="jam">Rating</string>
    <string name="rute">Booking</string>
    <string name="website">Website</string>
<<<<<<< HEAD
    <string name="description">Miêu tả</string>
    <string name="price">Price</string>
<<<<<<< HEAD
=======
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
=======
>>>>>>> dbd45e2a8c65157d53125cb85dcf374f0a3e40d7


    <!-- An -->
    <string name="full_app_name">WE HELP YOU BOOK</string>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="sign_in_by">Đăng nhập hoặc đăng ký bằng</string>
=======
<<<<<<< HEAD
    <string name="sign_in_by">Đăng nhập bằng</string>
=======
    <string name="sign_in_by">Đăng nhập hoặc đăng ký bằng</string>
>>>>>>> main
>>>>>>> an
=======
    <string name="sign_in_by">Đăng nhập bằng</string>
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
=======
    <string name="sign_in_by">Đăng nhập hoặc đăng ký bằng</string>
>>>>>>> dbd45e2a8c65157d53125cb85dcf374f0a3e40d7
    <string name="email">Email</string>
    <string name="next">Tiếp tục</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="settv">settv</string>
    <string name="input_fullname">Nhập họ tên</string>
    <string name="fullname_hint">Họ tên</string>
    <string name="input_repass_textview">Nhập lại mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="continue_with">hoặc tiếp tục bằng</string>
    <string name="todo">TODO</string>
    <string name="check">check</string>
    <string name="input_repassword">Nhập lại mật khẩu</string>
    <string name="name">Tên</string>
    <string name="form_email">user@example.com</string>
    <string name="logout">Đăng xuất</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="sent_verify">Gửi xác nhận</string>
    <string name="please_verify_email">Hãy xác nhận email của bạn</string>
    <string name="delete_account">Xóa tài khoản</string>
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
    <!-- TODO: Remove or change this placeholder text -->
=======
>>>>>>> an
    <string name="cancel">hủy</string>
    <string name="image_url">Image URL</string>
    <string name="rate_text">Rate</string>
    <string name="change_voucher">Thông tin voucher</string>
    <string name="voucher_name">Tên voucher</string>
    <string name="change_info_restaurant">Thông tin nhà hàng</string>
    <string name="restaurant_name">Tên nhà hàng</string>
    <string name="restaurant_address">Địa chỉ nhà hàng</string>
    <string name="voucher_description">Mô tả voucher</string>
    <string name="sale">Khuyến mãi bao nhiêu phần trăm?</string>

<<<<<<< HEAD
=======
>>>>>>> main
>>>>>>> an
=======
    <!-- TODO: Remove or change this placeholder text -->
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Họ tên</string> 
    <string name="update">Cập nhật</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận mật khẩu mới</string>
    <string name="email_sent_vetification">Gửi xác nhận Email</string>
    <string name="change_confirm">Xác nhận thay đổi</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel_goback">Hủy và trở về</string>
    <string name="are_you_sure">Bạn có chắc chắn rằng là bạn muốn xóa tài khoản?</string>

<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
=======
>>>>>>> an
    <!-- Duy-->
=======
    <!-- Testfragment-->
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
<<<<<<< HEAD
    <string name="menu_user_infor">User Information</string>
    <string name="menu_voucher">Voucher</string>
    <string name="menu_mybooking">MyBooking</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Logout</string>
    <string name="input_email">Nhập email</string>
<<<<<<< HEAD
    <string name="edit_voucher">Edit</string>
    <string name="remove_voucher">Remove</string>
    <string name="add_voucher">Thêm voucher</string>
    <string name="time_booking">Time booking:  %1$s</string>
    <string name="order">Order #%1$s</string>
    <string name="menu_edit_restaurant">Edit Restaurant</string>
    <string name="time_ending">Time ending:  %1$s</string>

<<<<<<< HEAD
=======
>>>>>>> main
>>>>>>> an
=======
    <string name="app_name">WeHelpYouBook</string>
>>>>>>> 87fa3f6c1624095320e2c0fee7eb6617695afe5a
=======
    <string name="menu_mybooking">MyBooking</string>
    <string name="menu_feedback">Feedback</string>
    <string name="description">Miêu tả</string>
    <string name="price">Price</string>

>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
=======

>>>>>>> dbd45e2a8c65157d53125cb85dcf374f0a3e40d7
</resources>