<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view_customer">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_user_infor" />

        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/ic_menu_my_booking"
            android:title="@string/menu_mybooking" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_log_out"
            android:title="@string/menu_logout" />
    </group>
</menu>