<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wehelpyoubook.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.wehelpyoubook.mybooking.MyBookingFragment"
        android:label="@string/menu_mybooking"
        tools:layout="@layout/fragment_my_booking" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.wehelpyoubook.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />
</navigation>