<?xml version="1.0"  encoding="utf-8" ?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeActivity"
        android:padding="8dp">

        <Button
            android:id="@+id/restaurant_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_margin="5dp"
            android:text="@string/restaurant_list"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/booked_restaurant_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_margin="5dp"
            android:text="@string/booked_restaurant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/restaurant_list_button"/>

        <Button
            android:id="@+id/voucher_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_margin="5dp"
            android:text="@string/voucher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/booked_restaurant_button"/>

        <Button
            android:id="@+id/user_information_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_margin="5dp"
            android:text="@string/user_information"
            app:layout_constraintTop_toBottomOf="@id/restaurant_list_button"
            app:layout_constraintStart_toStartOf="@id/restaurant_list_button"/>

        <Button
            android:id="@+id/feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:layout_margin="5dp"
            android:text="@string/feed_back"
            app:layout_constraintTop_toBottomOf="@id/restaurant_list_button"
            app:layout_constraintStart_toEndOf="@id/user_information_button"/>

        <TextView
            android:id="@+id/restaurant_near_you_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/restaurant_near_you"
            app:layout_constraintTop_toBottomOf="@id/user_information_button"
            app:layout_constraintStart_toStartOf="@id/user_information_button"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:spanCount="2"
            app:layout_constraintTop_toBottomOf="@id/restaurant_near_you_textview"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>