<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountcontrol.EmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="end"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/input_phone_number_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in_by"
            android:textColor="#0B0A0A"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:completionThreshold="1"
            android:drawableStart="@drawable/mail_icon"
            android:ems="20"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            app:counterMaxLength="10" />

        <Button
            android:id="@+id/check_email"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/continue_button"
                android:layout_width="345dp"
                android:layout_height="62dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="360dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="100dp"
                android:text="@string/next"
                android:textColor="#6D4C41"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>