<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".accountcontrol.user.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="30dp">

<<<<<<< HEAD
=======
        <TextView
            android:id="@+id/login_set_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settv"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:passwordToggleEnabled="true">

<<<<<<< HEAD
=======
>>>>>>> main
>>>>>>> an
=======
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
=======
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544
        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="40dp"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgot_password_textview"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textSize="15sp" />
        </LinearLayout>
<<<<<<< HEAD
=======
>>>>>>> an
        <TextView
            android:id="@+id/forgot_password_textview"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/forgot_password"
            android:textSize="15sp" />
<<<<<<< HEAD
=======
>>>>>>> main
>>>>>>> an
=======
>>>>>>> d3a1e2e87bf0def9abbbaba35558de4ed77c9544

        <Button
            android:id="@+id/login_button"
            android:layout_width="275dp"
            android:layout_height="58dp"
            android:layout_marginTop="300dp"
            android:text="@string/login"
            android:textColor="#6D4C41"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>